// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Textarea > Snapshot Tests > matches snapshot for default textarea 1`] = `
<textarea
  class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
/>
`;

exports[`Textarea > Snapshot Tests > matches snapshot for disabled textarea 1`] = `
<textarea
  class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
  disabled=""
/>
`;

exports[`Textarea > Snapshot Tests > matches snapshot for textarea with placeholder 1`] = `
<textarea
  class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
  placeholder="Enter text"
/>
`;

exports[`Textarea > Snapshot Tests > matches snapshot for textarea with value 1`] = `
<textarea
  class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
  readonly=""
>
  Test value
</textarea>
`;
